--- a/03-foundation/index.html
+++ b/03-foundation/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <div id="root">//content will be injected here</div>
+
+    <div id="test">//test div</div>
 
     <script src="./App.js" type="module"></script>
   </body>
